# kr-health-monitor

./: .env.example  .gitignore  METHODOLOGY.md  PIPELINE.md  README.md  STATUS.md  cli.py  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
02_Pipeline/: extract_hira_devices.py  pipeline.py  transform.py
03_Analysis/: coverage_adequacy.py  run_coverage_analysis.py  run_regional_variation.py  run_trend_analysis.py
analysis/: coverage_gap.csv  coverage_gap.py  coverage_gap_by_product.csv  coverage_trend.csv  coverage_trend.py  data_coherency_check_2026-03-12.md  findings_dataset_integration_2026-03-12.md  pipeline_techniques_2026-03-12.md  policy_dissemination_strategy_korea_2026-03-12.md  regional_equity.csv  regional_equity.py  run_coverage_gap.py  run_coverage_trend.py  run_regional_equity.py  seoul_diabetes_by_district_age_sex_type_2026-03-12.md
analysis/reports/: cgm_coverage_report.html
pipeline/: build_master.py  fetch_hira.py  fetch_mfds.py  fetch_nhis.py  run.py
src/: audit.py  config.py  coverage.py  coverage_index.py  devices.py  equity.py  freshness.py  hira_client.py  mfds_client.py  nhis_client.py  policy.py  report.py  storage.py  store.py
tests/: conftest.py  test_data_contracts.py  test_pipeline_invariants.py  test_policy_math.py
tests/fixtures/: mfds_cgm_sample.csv  regional_diabetes_sample.csv
